Add OpenJDK 25
Cleanup to only reference JDK LTS versions.

Fixes: b/452254973
Bug: b/145566657
Change-Id: Ie7d7785a7c04bc06f24995c0f34543c27541dfb7