@@ -1,8 +1,7 @@
-// Copyright (c) 2025, the R8 project authors. Please see the AUTHORS file
+// Copyright (c) 2024, the R8 project authors. Please see the AUTHORS file
 // for details. All rights reserved. Use of this source code is governed by a
 // BSD-style license that can be found in the LICENSE file.
-
-package com.android.tools.r8.jdk24.switchpatternmatching;
+package com.android.tools.r8.jdk25.switchpatternmatching;
 
 import static com.android.tools.r8.desugar.switchpatternmatching.SwitchTestHelper.hasJdk21TypeSwitch;
 import static org.junit.Assert.assertTrue;
@@ -22,15 +21,18 @@ import org.junit.runners.Parameterized;
 import org.junit.runners.Parameterized.Parameter;
 import org.junit.runners.Parameterized.Parameters;
 
+// This is a copy of the same test from JDK-21. The reason for the copy is that from JDK-23 the
+// code generation for pattern matching switch changed (the bootstrap method signature used in the
+// invokedynamic changed).
 @RunWith(Parameterized.class)
-public class DexNumberValueSwitchTest extends TestBase {
+public class TypeSwitchTest extends TestBase {
 
   @Parameter public TestParameters parameters;
 
   @Parameters(name = "{0}")
   public static TestParametersCollection data() {
     return getTestParameters()
-        .withCfRuntimesStartingFromIncluding(CfVm.JDK24)
+        .withCfRuntimesStartingFromIncluding(CfVm.JDK25)
         .withDexRuntimes()
         .withAllApiLevelsAlsoForCf()
         .withPartialCompilation()
@@ -39,18 +41,17 @@ public class DexNumberValueSwitchTest extends TestBase {
 
   public static String EXPECTED_OUTPUT =
       StringUtils.lines(
-          "null", "42", "positif", "negatif", "null", "42", "positif", "negatif", "null", "42",
-          "positif", "negatif", "null", "true", "false");
+          "null", "String", "Color: RED", "Point: [0;0]", "Array of int, length = 0", "Other");
 
   @Test
   public void testJvm() throws Exception {
     assumeTrue(parameters.isCfRuntime());
     CodeInspector inspector = new CodeInspector(ToolHelper.getClassFileForTestClass(Main.class));
     assertTrue(
-        hasJdk21TypeSwitch(inspector.clazz(Main.class).uniqueMethodWithOriginalName("longSwitch")));
+        hasJdk21TypeSwitch(inspector.clazz(Main.class).uniqueMethodWithOriginalName("typeSwitch")));
+
     parameters.assumeJvmTestParameters();
     testForJvm(parameters)
-        .enablePreview()
         .addInnerClassesAndStrippedOuter(getClass())
         .run(parameters.getRuntime(), Main.class)
         .assertSuccessWithOutput(EXPECTED_OUTPUT);
@@ -73,98 +74,38 @@ public class DexNumberValueSwitchTest extends TestBase {
             parameters.isCfRuntime(),
             b -> b.addLibraryProvider(JdkClassFileProvider.fromSystemJdk()))
         .addKeepMainRule(Main.class)
-        .compile()
-        .applyIf(parameters.isCfRuntime(), b -> b.addVmArguments("--enable-preview"))
         .run(parameters.getRuntime(), Main.class)
         .assertSuccessWithOutput(EXPECTED_OUTPUT);
   }
 
+  record Point(int i, int j) {}
+
+  enum Color {
+    RED,
+    GREEN,
+    BLUE;
+  }
+
   static class Main {
 
-    static void booleanSwitch(Boolean b) {
-      switch (b) {
-        case null -> {
-          System.out.println("null");
-        }
-        case true -> {
-          System.out.println("true");
-        }
-        default -> {
-          System.out.println("false");
-        }
-      }
-    }
-
-    static void doubleSwitch(Double d) {
-      switch (d) {
-        case null -> {
-          System.out.println("null");
-        }
-        case 42.0 -> {
-          System.out.println("42");
-        }
-        case Double f2 when f2 > 0 -> {
-          System.out.println("positif");
-        }
-        default -> {
-          System.out.println("negatif");
-        }
-      }
-    }
-
-    static void floatSwitch(Float f) {
-      switch (f) {
-        case null -> {
-          System.out.println("null");
-        }
-        case 42.0f -> {
-          System.out.println("42");
-        }
-        case Float f2 when f2 > 0 -> {
-          System.out.println("positif");
-        }
-        default -> {
-          System.out.println("negatif");
-        }
-      }
-    }
-
-    static void longSwitch(Long l) {
-      switch (l) {
-        case null -> {
-          System.out.println("null");
-        }
-        case 42L -> {
-          System.out.println("42");
-        }
-        case Long i2 when i2 > 0 -> {
-          System.out.println("positif");
-        }
-        default -> {
-          System.out.println("negatif");
-        }
+    static void typeSwitch(Object obj) {
+      switch (obj) {
+        case null -> System.out.println("null");
+        case String string -> System.out.println("String");
+        case Color color -> System.out.println("Color: " + color);
+        case Point point -> System.out.println("Point: [" + point.i + ";" + point.j + "]");
+        case int[] intArray -> System.out.println("Array of int, length = " + intArray.length);
+        default -> System.out.println("Other");
       }
     }
 
     public static void main(String[] args) {
-      longSwitch(null);
-      longSwitch(42L);
-      longSwitch(12L);
-      longSwitch(-1L);
-
-      floatSwitch(null);
-      floatSwitch(42.0f);
-      floatSwitch(12.0f);
-      floatSwitch(-1.0f);
-
-      doubleSwitch(null);
-      doubleSwitch(42.0);
-      doubleSwitch(12.0);
-      doubleSwitch(-1.0);
-
-      booleanSwitch(null);
-      booleanSwitch(true);
-      booleanSwitch(false);
+      typeSwitch(null);
+      typeSwitch("s");
+      typeSwitch(Color.RED);
+      typeSwitch(new Point(0, 0));
+      typeSwitch(new int[] {});
+      typeSwitch(new Object());
     }
   }
 }
